--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "kiroAgent.configureMCP": "Enabled"
+    "kiroAgent.configureMCP": "Enabled",
+    "editor.formatOnSave": false,
+    "editor.formatOnType": false,
+    "html.format.enable": false
 }
